force-app/main/default/objects/Comp_Code__c/Comp_Code__c.object-meta.xml
<CustomObject>
    <description>Small object used to facilitate date on Trident Account records</description>
    <label>Comp Code</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Comp Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Comp Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>