force-app/main/default/objects/Comp_Code__c/fields/Off_Us__c.field-meta.xml
<CustomField>
    <fullName>Off_Us__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Off Us*</label>
    <length>16</length>
    <type>Text</type>
</CustomField>