force-app/main/default/objects/Comp_Code__c/fields/Renewal__c.field-meta.xml
<CustomField>
    <fullName>Renewal__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Renewal</label>
    <length>16</length>
    <type>Text</type>
</CustomField>